wifi: indicate to the kernel when critical protocols start/stop (bgo #723241)

Add support for the kernel's Wi-Fi critical protocol indication to make
DHCP and IPv6 SLAAC more reliable.

https://bugzilla.gnome.org/show_bug.cgi?id=723241